# IS-2020

./: CMakeLists.txt  Eu152m0.txt  README.md  main.cc  run.mac  vis.mac
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  GammaNuclearPhysics.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  custommodel.hh  customprocess.hh  talyscrosssection.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstructionTheoCauHinhThayThiep.C  GammaNuclearPhysics.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  custommodel.cc  talyscrosssection.cc
